[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maze-runner"
version = "0.1.0"
description = "Maze policy runner with Gymnasium env, PyTorch baseline, and web viz"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "torch>=2.2",
    "gymnasium>=0.29",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "tabulate>=0.9",
    "tqdm>=4.66",
]

[project.scripts]
viz = "maze_runner.cli.viz:main"
stats = "maze_runner.cli.stats:main"
test = "pytest:console_main"

[dependency-groups]
dev = ["pytest>=8", "httpx>=0.27"]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["src/maze_runner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
